# working_docker_django_rest_api

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog_setup/: asgi.py  settings.py  urls.py  wsgi.py
templates/: _base.html  create_blog.html  delete_blog.html  home.html  post_detail.html  update_blog.html
